--- a/Validation/README
+++ b/Validation/README
@@ -4,7 +4,7 @@ input data:
   Genetic data: /scratch/richards/guillaume.butler-laporte/ukb_covid/wes_qc_chr/*.{pgen,psam,pvar}
   Covariates data: /project/richards/guillaume.butler-laporte/protein_gwas/covar_rare_proteins.tsv.gz
   Phenotype data: /project/richards/guillaume.butler-laporte/protein_gwas/prot_pheno.tsv.gz
-  
+
 Steps:
-  1. convert pgen,psam,pvar files to vcf files
+  1. convert pgen,psam,pvar files to sites only vcf files
   2. run nextflow pipelines with vcf files as inputs
